--- a/app/sass/content/_card-product-product.scss
+++ b/app/sass/content/_card-product-product.scss
@@ -10,6 +10,10 @@
           margin-right: 0;
         }
       }
+      @include breakpoint(max-width 500px) {
+        width: calc(100% - 40px);
+        margin: 20px;
+      }
       position: relative;
       background-color: #ffffff;
       border: 1px solid #e4e4e4;
