--- a/app/sass/footer/_style.scss
+++ b/app/sass/footer/_style.scss
@@ -111,49 +111,64 @@
     }
   }
 }
-
-.modal {
-  display: none;
-  width: 100%;
-  position: absolute;
-  background-color: #e4e4e4;
-  color: #2c3e50;
-  font-size:15px;
-  font-weight: 700;
-  text-align: center;
-  padding: 10px;
-  span {
-    color: #3c9dd0;
-  }
-  .basket {
-    @include breakpoint(max-width 450px) {
-      float: left;
+//.overlay {
+//  display: none;
+//  width: 100%;
+//  height: 100%;
+//  position: fixed;
+//  background-color: #fff;
+//  opacity: .9;
+//  top: 50%;
+//  left: 50%;
+//  transform: translate(-50%,-50%);
+//  z-index: 1000;
+  .modal {
+    display: none;
+    width: 100%;
+    position: fixed;
+    background-color: #e4e4e4;
+    color: #2c3e50;
+    font-size:15px;
+    font-weight: 700;
+    text-align: center;
+    padding: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 10001;
+    span {
+      color: #3c9dd0;
     }
-    display: inline-block;
-    position: relative;
-    padding-right: 20px;
-    vertical-align: middle;
-  }
-  p {
-    @include breakpoint(max-width 450px) {
-      float: left;
-      text-align: left;
-      width: 70%;
-      margin: 0;
-      margin-bottom: 5px;
-    }
-    display: inline-block;
-    padding-right: 20px;
-  }
-  a {
-    @include breakpoint(max-width 450px) {
+    .basket {
+      @include breakpoint(max-width 450px) {
+        float: left;
+      }
+      display: inline-block;
       position: relative;
-      float: left;
-      left: 50%;
-      transform: translate(-50%);
-      margin-top: 20px;
+      padding-right: 20px;
+      vertical-align: middle;
     }
-    text-transform: uppercase;
-    margin-button: 10px;
+    p {
+      @include breakpoint(max-width 450px) {
+        float: left;
+        text-align: left;
+        width: 70%;
+        margin: 0;
+        margin-bottom: 5px;
+      }
+      display: inline-block;
+      padding-right: 20px;
+    }
+    a {
+      @include breakpoint(max-width 450px) {
+        position: relative;
+        float: left;
+        left: 50%;
+        transform: translate(-50%);
+        margin-top: 20px;
+      }
+      text-transform: uppercase;
+      margin-button: 10px;
+    }
   }
-}
+//}
