--- a/app/sass/header/_head.scss
+++ b/app/sass/header/_head.scss
@@ -24,7 +24,7 @@
     }
     li {
       list-style: none;
-      padding: 1.5%;
+      padding: 10px;
     }
     a {
       color: #000;
@@ -39,7 +39,7 @@
     &__location {
       @include display-flex(flex);
       @include flex-direction(row);
-      @include flex-grow(1);
+      //@include flex-grow(1);
       @include align-items(center);
       padding-right: 20px;
 
@@ -48,13 +48,13 @@
       @include display-flex(flex);
       @include flex-direction(row);
       @include align-items(center);
-      @include flex-grow(1);
+      //@include flex-grow(1);
 
     }
     &__nav {
       @include display-flex(flex);
       @include align-items(center);
-      @include flex-grow(2);
+      //@include flex-grow(2);
       @include justify-content(flex-end);
       ul {
         @include display-flex(flex);
@@ -82,7 +82,7 @@
         margin: 0px 5px;
         width: 100%;
       }
-      @include flex-grow(6);
+      //@include flex-grow(6);
 
       position: relative;
       z-index: 20;
